unpackaged/main/default/objects/E2CP__Variation_Criterion__c/fields/E2CP__Field__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>