unpackaged/main/default/objects/E2CP__Variation_Criterion__c/listViews/E2CP__All.listView-meta.xml
<ListView>
    <fullName>E2CP__All</fullName>
    <columns>NAME</columns>
    <columns>E2CP__Type__c</columns>
    <columns>E2CP__Field__c</columns>
    <columns>E2CP__Operator__c</columns>
    <columns>E2CP__Value__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>